--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-		"validate-version": "deno run --allow-read --allow-run=git external/symlinks_validate.js",
+		"validate": "deno run --allow-read --allow-run=git external/symlinks_validate.js",
+		"validate-w-fetch": "deno run --allow-read --allow-run=git external/symlinks_validate.js --fetch",
     "create-symlinks": "deno run --allow-read --allow-write external/symlinks_create.js"
   },
   "dependencies": {
