--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "validate": "deno run --allow-read --allow-run=git external/symlinks_validate.js",
-    "validate-w-fetch": "deno run --allow-read --allow-run=git external/symlinks_validate.js --fetch",
-    "create-symlinks": "deno run --allow-read --allow-write external/symlinks_create.js"
+    "validate": "deno run --allow-read --allow-run=git scripts/symlinks_validate.js",
+    "validate-w-fetch": "deno run --allow-read --allow-run=git scripts/symlinks_validate.js --fetch",
+    "create-symlinks": "deno run --allow-read --allow-write scripts/symlinks_create.js",
+    "deploy": "./scripts/deploy.sh"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
