--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+	"preview": "vite preview",
     "validate": "deno run --allow-read --allow-run=git scripts/symlinks_validate.js",
     "validate-w-fetch": "deno run --allow-read --allow-run=git scripts/symlinks_validate.js --fetch",
     "create-symlinks": "deno run --allow-read --allow-write scripts/symlinks_create.js",
     "deploy": "./scripts/deploy.sh"
   },
   "devDependencies": {
-    "@types/node": "^22.9.1",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/vite": "^4.0.9",
+    "@types/node": "^22.13.5",
     "fontawesome-svgs": "^1.0.3",
-    "vite": "^5.4.11"
+    "tailwindcss": "^4.0.9",
+    "svelte": "^5.23.0",
+    "vite": "^6.2.0"
   }
 }
