--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-	"preview": "vite preview",
+    "preview": "vite preview",
     "validate": "deno run --allow-read --allow-run=git scripts/symlinks_validate.js",
     "validate-w-fetch": "deno run --allow-read --allow-run=git scripts/symlinks_validate.js --fetch",
     "create-symlinks": "deno run --allow-read --allow-write scripts/symlinks_create.js",
@@ -15,8 +15,9 @@
     "@tailwindcss/vite": "^4.0.9",
     "@types/node": "^22.13.5",
     "fontawesome-svgs": "^1.0.3",
-    "tailwindcss": "^4.0.9",
     "svelte": "^5.23.0",
-    "vite": "^6.2.0"
+    "tailwindcss": "^4.0.9",
+    "vite": "^6.2.0",
+    "vite-imagetools": "^7.0.5"
   }
 }
